--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.9.0",
+    "framer-motion": "^12.11.3",
+    "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tippy.js": "^6.3.7",
+    "web-vitals": "^2.1.4",
+    "wordcloud": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
